--- a/1 lesson.html
+++ b/1 lesson.html
@@ -7,6 +7,7 @@
 
     </head>
     <body>
+        <h1>GitHub</h1>
         <h1>PDP Academy</h1>
         <h2>Pdp Academy</h2>
         <h3>Pdp Academy</h3>
